--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,16 +13,22 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/cli": "^7.10.4",
+    "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
+    "firebase": "^7.16.1",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0"
+    "html-webpack-plugin": "^4.3.0",
+    "react-bootstrap": "^1.3.0",
+    "react-router-dom": "^5.2.0"
   }
 }
